@@ -2,3 +2,4 @@
 
 $(dirname $0)/build.sh
 $(dirname $0)/run.sh
+$(dirname $0)/test.sh
