@@ -16,6 +16,7 @@ cod-tools (2.3)
       - the 'F 1 1 d' space group description;
       - the 'C 1 c 1 (a-3/8,b-3/8,a+2*c)' space group description;
       - the 'F 1 2/d 1'  space group description.
+    - Test dependencies for CentOS-6.8.
   * Changed:
     - cif_cod_check:
       - modifying the warning message about missing authors to use the same
